@@ -75,6 +75,7 @@ All existing SysON _DiagramDescriptions_ (i.g. _General View_, _Interconnection 
 - https://github.com/eclipse-syson/syson/issues/1314[#1314] [diagrams] Update `ViewUsage#exposedElement` when manipulating any SysMLv2 diagram (_General View_, _Interconnection View_, ...).
 - https://github.com/eclipse-syson/syson/issues/1322[#1322] [import] Make file extension check case-insensitive on textual import (i.e. allows to import .SYSML, .SysML, .KERML...)
 - https://github.com/eclipse-syson/syson/issues/1339[#1339] [details] Make the _Details_ view more extensible in how it determines whether an _Element_ is read-only or not.
+- https://github.com/eclipse-syson/syson/issues/1357[#1357] [syson] Add support for `Resource` and `EAnnotation` in `SysONReadOnlyObjectPredicateDelegate`.
 
 === New features
 
